<resources>
    <string name="default_playlist_url" translatable="false">http://openwrt.lan/iptv.m3u</string>
    <string name="default_buffer_duration" translatable="false">500</string>

    <string name="app_name">MyTV</string>
    <string name="title_activity_main">TV Show</string>

    <string name="others_group">Others</string>
    <string name="all_channels">All Channels</string>

    <string name="play_error">Play Error</string>

    <string name="no_playlist">No Playlist</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="epg_url">EPG URL</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="play_error_format_not_supported">Unable to play the selected channel. The media format is not supported.</string>
    <string name="play_error_connection_timeout">Connection timeout. Please check your network connection.</string>
    <string name="play_error_channel_not_found">Channel not found. The stream URL may be invalid.</string>
    <string name="play_error_access_denied">Access denied. Please check your subscription or credentials.</string>
    <string name="play_error_general">An error occurred while playing the channel.</string>
    <string name="buffer_duration">Buffer duration</string>
    <string name="prefer_tvg_url">Prefer TVG URL</string>
    <string name="enable_all_channels_group">Enable "All Channels" group</string>
    <string name="multicast_interface">Multicast Interface</string>
    <string name="default_multicast_interface" translatable="false">auto</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_normal">Normal</string>
    <string name="text_size_large">Large</string>
    <string name="text_size_extra_large">Extra Large</string>
    <string name="text_size_default" translatable="false">normal</string>
    <string name="loading">Loading…</string>
    <string name="loading_playlist">Loading playlist…</string>
    <string name="loading_epg">Loading EPG…</string>
    <string name="error_loading_playlist">Error loading playlist</string>
    <string name="no_channels_found">No channels found</string>
    <string name="settings">Settings</string>
    <string name="channels">Channels</string>
    <string name="close">Close</string>

    <string-array name="text_size_entries">
        <item>@string/text_size_normal</item>
        <item>@string/text_size_large</item>
        <item>@string/text_size_extra_large</item>
    </string-array>
    <string-array name="text_size_values">
        <item>normal</item>
        <item>large</item>
        <item>extra_large</item>
    </string-array>

</resources>
