<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="PlaylistUrl"
        android:title="@string/playlist_url"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="@string/default_playlist_url"/>
    <EditTextPreference
        android:key="EPGUrl"
        android:title="@string/epg_url"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="@string/default_epg_url"/>
    <EditTextPreference
        android:key="BufferDuration"
        android:title="@string/buffer_duration"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="@string/default_buffer_duration"/>
</PreferenceScreen>
